[package]
name = "raisinlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"
syscalls = { version = "0.6.13", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
